hard-gists/35723b58d238a67234d8/run.log
=== Docker Run Log for 35723b58d238a67234d8 ===
Started at: Mi 29. Okt 13:55:04 CET 2025

[2025-10-29 13:55:04] START: Running container for 35723b58d238a67234d8
[2025-10-29 13:55:04] SUCCESS: Container d808b01c6c4a9f86dc3a9757d68037d124f6a522c4f54238212c460cb9332e8c started for 35723b58d238a67234d8
=== Container logs for 35723b58d238a67234d8 ===
  File "/snippet.py", line 149
    print 'Severity\tCategory\tNode\tMessage'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 35723b58d238a67234d8 ===
[2025-10-29 13:55:06] INFO: Container d808b01c6c4a9f86dc3a9757d68037d124f6a522c4f54238212c460cb9332e8c has stopped
